testing different file organization

--- a/reproduction/replication_code.ipynb
+++ b/reproduction/replication_code.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = CSV.read(\"../usa1.csv\", DataFrame); # Replication edit: needed to add sink arg"
+    "df = CSV.read(\"../../usa1.csv\", DataFrame); # Replication edit: needed to add sink arg"
    ]
   },
   {
