--- a/reproduction/replication_code.ipynb
+++ b/reproduction/replication_code.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = CSV.read(\"../../usa1.csv\", DataFrame); # Replication edit: needed to add sink arg"
+    "df = CSV.read(\"/app/data/usa1.csv\", DataFrame); # Replication edit: needed to add sink arg"
    ]
   },
   {
@@ -1128,15 +1128,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.0",
+   "display_name": "Julia 1.6.7",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.0"
+   "version": "1.6.7"
   }
  },
  "nbformat": 4,
