--- a/replication/rep_80prct/replication_code.ipynb
+++ b/replication/rep_80prct/replication_code.ipynb
@@ -2112,7 +2112,7 @@
     }
    ],
    "source": [
-    "b, B, K, K_pooled = 10000, 6000, [], []\n",
+    "b, B, K, K_pooled = 10000, 4000, [], []\n",
     "p4, p21, p22 = zeros(b), zeros(b), zeros(b)\n",
     "\n",
     "for j in 1:1:B\n",
@@ -2239,7 +2239,7 @@
     "    <b>Replication Edit:</b> <br> \n",
     "    Initialize objects to store and display the empirical results for Table 1, 2, and 3. <br>\n",
     "    The original program only export the variables for all tables in a single csv file at the end. <br>\n",
-    "    Increase the number of reptition in bootstrapping by 20%\n",
+    "    Reduce the number of reptition in bootstrapping to 80%\n",
     "</div>"
    ]
   },
@@ -2307,7 +2307,7 @@
     "    pow22 = (dfcat[dfcat.initial .== 3, :].logchange).^2\n",
     "    \n",
     "    # Replication edit: change the number of repetition in bootstrapping\n",
-    "    B, K, K_pooled, p41, p42, p21, p22  = 6000, [], [], zeros(S), zeros(S), zeros(S), zeros(S) \n",
+    "    B, K, K_pooled, p41, p42, p21, p22  = 4000, [], [], zeros(S), zeros(S), zeros(S), zeros(S) \n",
     "    for j in 1:1:B\n",
     "        ind = rand(DiscreteUniform(1,S),S)\n",
     "        count = 0\n",
@@ -2384,7 +2384,7 @@
     "    mom1, mom2, mom3, mom4 = [], [], [], []\n",
     "    G11, G21, G22, G31, G32 = [], [], [], [], []\n",
     "    # Replication edit: change the number of repetition on bootstrapping\n",
-    "    B, C_pooled, C, k_pooled = 1200, [], [], []\n",
+    "    B, C_pooled, C, k_pooled = 800, [], [], []\n",
     "    for b in 1:1:B\n",
     "        indices = rand(DiscreteUniform(1,size(dfprod,1)),Int64(round(size(dfprod,1)*0.8)))\n",
     "        dfprod_boot = dfprod[indices, :]\n",
