--- a/reproduction/rep_500prct/replication_code.ipynb
+++ b/reproduction/rep_500prct/replication_code.ipynb
@@ -2488,7 +2488,7 @@
     "    <b>Replication Edit:</b> <br> \n",
     "    Initialize objects to store and display the empirical results for Table 1, 2, and 3. <br>\n",
     "    The original program only export the variables for all tables in a single csv file at the end. <br>\n",
-    "    Increase the number of reptition in bootstrapping to 500%\n",
+    "    Increase the number of repetition in bootstrapping to 500%\n",
     "</div>"
    ]
   },
